# B8204-Repository

./: .gitignore  CodeReview by Dimitry  CodeReview by Kirill.txt  Codereview by Kirill.txt  README.md  TEST!!!.txt  det.cpp  determinant.h  file2.txt  readme.txt  score.cpp  tryfib.cpp  фиб антонова.txt
Tasks/Task0/: README.md
Tasks/Task0.1/: README.md
Tasks/Task0.2/: CMakeLists.txt  LNN6.cpp  README.md  bp_1_MelnikAlexander.cpp  broken3.cpp  broken4.cpp  broken5.cpp  broken8.cpp  broken_telephone.h  lineNodeNoise2.c  lineNodeNoise2.cpp  main.cpp
Tasks/Task0.2/SimakovValentin/: broken_telephone.h
Tasks/Task0.3/: CMakeLists.txt  README.md  affine_сipher.h
Tasks/Task0.3/SimakovValentin/: affine_cipher_0.cpp  caesar_cipher.h  caesar_cipher_0.cpp
Tasks/Task0/FedorenkoDmitry/: CodeReviewByGregoryan  HelloWorld.cpp
Tasks/Task0/GolubKonstantin/: Code review by Melnik Alexander.txt  CodeReview by Dimitry  Codereview by Gregory  Codereview by Valentin.txt  fib.cpp  fib.h  main.c
Tasks/Task1/: ConsoleApplication2.cpp  main.cpp  translit_0'.cpp  translit_lib.h
Tasks/Task1/AntonovaElina/: main.cpp  translit.cpp  translit.h  translitV2.sln
Tasks/Task1/GolubKonstantin/: main.cpp  translit_lib.h
Tasks/Task2/: README.md  example.cpp  main.cpp  matrix_0.cpp  matrix_imp.cpp  matrix_lib.cpp  matrix_lib.h  matrix_lib.t.hpp
Tasks/Task3/: base64.cpp
Tasks/TaskTest91217/: CMakeLists.txt  main.cpp  my_lib.h
Tasks/TaskTest91217RG/: my_lib.cpp  tests.cpp
fib/: Code review by Melnik Alexander.txt  imp1.cpp  main.cpp  mylib.h
fibArr/: fibArr.cpp
(+79 files in other folders)
